src/test/ui/issues/issue-49040.stderr
error: expected item, found `;`
  --> $DIR/issue-49040.rs:11:28
   |
LL | #![allow(unused_variables)]; //~ ERROR expected item, found `;`
   |                            ^ expected item

error: aborting due to previous error

