src/test/ui/issues/issue-49040.rs
#![allow(unused_variables)]; //~ ERROR statements cannot reside in modules
//~^ ERROR `main` function
fn foo() {}
